个人中心功能完成

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="layui-header">
             <div class="layui-logo">
                 <img src="/assets/images/logo.png" alt="">
-            </div>
+            </div>w
             <!-- 头部区域（可配合layui已有的水平导航） -->
             <ul class="layui-nav layui-layout-right">
                 <li class="layui-nav-item">
@@ -31,9 +31,13 @@
                         个人中心
                     </a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> 基本资料</a></dd>
-                        <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> 更换头像</a></dd>
-                        <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> 重置密码</a></dd>
+                        <dd><a href="/user/user_info.html" target="fm"><i class="layui-icon layui-icon-app"></i>
+                                基本资料</a></dd>
+                        <dd><a href="/user/user_avatar.html " target="fm"><i class=" layui-icon layui-icon-app"></i>
+                                更换头像</a></dd>
+                        <dd><a href="/user/user_pwd.html" target="fm"><i class=" layui-icon layui-icon-app"></i>
+                                重置密码</a>
+                        </dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item"><a href="javascript:;" id="btnLogout"><span
@@ -52,8 +56,8 @@
                 <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
                 <ul class="layui-nav layui-nav-tree" lay-shrink="all">
                     <!-- 链接的页面是首页里面的内容 -->
-                    <li class="layui-nav-item layui-this"><a href="/home/dashboard.html" target="fm"><span
-                                class="iconfont icon-home"></span>首页</a></li>
+                    <li class="layui-nav-item layui-this"><a href="/home/dashboard.html" target="fm">
+                            <span class="iconfont icon-home"></span>首页</a></li>
                     <li class="layui-nav-item ">
                         <a class="" href="javascript:;"><span class="iconfont icon-16"></span>文章管理</a>
                         <dl class="layui-nav-child">
@@ -63,12 +67,14 @@
                         </dl>
                     </li>
                     <li class="layui-nav-item">
-                        <a href="javascript:;"><span class="iconfont icon-user"></span>个人中心</a>
+                        <a href="/user/user_info.html" target="fm"><span class="iconfont icon-user"></span>个人中心</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="/user/user_info.html" target="fm"><i
-                                        class="layui-icon layui-icon-app"></i>基本资料</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>更换头像</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>重置密码</a></dd>
+                            <dd><a href="/user/user_info.html" target="fm">
+                                    <i class="layui-icon layui-icon-app"></i>基本资料</a></dd>
+                            <dd><a href="/user/user_avatar.html" target="fm"><i
+                                        class="layui-icon layui-icon-app"></i>更换头像</a></dd>
+                            <dd><a href="/user/user_pwd.html" target="fm"><i
+                                        class="layui-icon layui-icon-app"></i>重置密码</a></dd>
                         </dl>
                     </li>
                 </ul>
@@ -82,7 +88,7 @@
 
         <div class="layui-footer">
             <!-- 底部固定区域 -->
-            ? www.itheima.com - 黑马程序员
+            © www.itheima.com - 黑马程序员
         </div>
     </div>
     <!-- 引入layui的js文件 -->
